--- a/Demo.html
+++ b/Demo.html
@@ -1,5 +1,14 @@
 <html>
+  <head>
+    <style>
+      body{
+        color: aquamarine;
+        background-color: black; 
+        
+      }
+    </style>
+  </head>
   <body>
-    <h1>HELLO WORLD</h1>
+    <h1><center>HELLO WORLD</center></h1>
   </body>
 </html>
