--- a/Demo.html
+++ b/Demo.html
@@ -4,7 +4,8 @@
       body{
         color: aquamarine;
         background-color: black; 
-        
+        font-size: 40px;
+        font-weight: bold;
       }
     </style>
   </head>
